--- a/src/BackTranslationHelper/BackTranslationHelper.csproj
+++ b/src/BackTranslationHelper/BackTranslationHelper.csproj
@@ -122,6 +122,7 @@
   <ItemGroup>
     <EmbeddedResource Include="BackTranslationHelperCtrl.resx">
       <DependentUpon>BackTranslationHelperCtrl.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="TranslatorListForm.resx">
       <DependentUpon>TranslatorListForm.cs</DependentUpon>
