--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
     #  run: output/Win32/${{matrix.build_configuration}}/RunTests.exe
 
   build-linux:
-    runs-on: [ubuntu-latest]
+    runs-on: [ubuntu-20.04]
     strategy:
        matrix:
          build_configuration: ["Debug", "Release"]
