--- a/Package.nuspec
+++ b/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
 	<metadata>
 		<id>Encoding-Converters-Core</id>
-		<version>0.5.3</version>
+		<version>0.5.4</version>
 		<authors>Bob Eaton, Jim Kornelson, SIL International</authors>
 		<owners>jnaylor, sillsdev</owners>
 		<license type="expression">MIT</license>
@@ -10,11 +10,12 @@
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>Libraries and merge modules for core encoding converter functionality.</description>
 		<releaseNotes>Includes managed DLL (for including in projects as nuget artifacts) in the .\lib\net48\... folder, and other managed and non-managed (read: non-nuget) resources that optionally may be manually added to projects or at least in installers in the .\runtimes\... folder -- including plugin definitions, tlb, and exe files for both Win32/x86 and x64. Some of the resources are also included in various merge modules in the .\installer\MergeModules... folder</releaseNotes>
-		<copyright>Copyright 2017-2021</copyright>
+		<copyright>Copyright 2017-2022</copyright>
 		<tags></tags>
 		<dependencies>
 			<group targetFramework=".NETFramework4.8" />
 		</dependencies>
+		<readme>ReadMe.md</readme>
 	</metadata>
 	<files>
 		<file src="ReadMe.md" />
